chore: add dynamic agent loading for jdk 21+